--- a/trade/trade-order/src/main/resources/application.yml
+++ b/trade/trade-order/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 8081
+spring:
+  datasource:
+    password: 1234
+    username: root
+    url: jdbc:mysql://192.168.0.105:3306/trade?useUnicode=true&characterEncoding=utf8
+    driver-class-name: com.mysql.jdbc.Driver
+  application:
+    name: trade-order
+goods-url: trade-goods
+nacos:
+  discovery:
+    server-addr: 192.168.0.105:8848
+    auto-register: true
