--- a/trade/trade-order/src/main/resources/application.yml
+++ b/trade/trade-order/src/main/resources/application.yml
@@ -14,3 +14,15 @@ nacos:
   discovery:
     server-addr: 192.168.0.105:8848
     auto-register: true
+mq:
+  order:
+    consumer:
+      group:
+        name: order_orderTopic_cancel_group
+    topic: orderTopic
+    tag:
+      cancel: order_cancel
+rocketmq:
+  producer:
+    group: orderProducergroup
+  name-server: 192.168.0.104:9876;192.168.0.105:9876
